2011-04-01 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* RTE Einstellungen gefixt (WWW-621)

2011-03-23 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* UpperCamelCase bei Templates
	* Einbindung aktuellerer jQuery Bibliothek im Backend
	* Optimierung Nachfrage beim Loeschen der Bibliothek

2011-03-21 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Deprecated Funktion entfernt im Hook

2011-03-17 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Workaround fuer TYPO3 4.4 (Repository)

2011-03-16 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Layout der Bibliotheken optimiert
	* CSS und JS angepasst
	* Korrektur der Sortierreihenfolge (WWW-605)
	* Bugfix in Singleansicht (mehr als 100 Funktionen aufgerufen)
	* Bei ehemaligen Bibliotheken ohne Adresse wird das Adressfeld ausgeblendet (WWW-612)

2011-03-15 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Der Bestand ist teilweise im GUK enthalten (WWW-596)

2011-03-11 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Oeffnungszeiten als Freitext - keine Berechnung mehr ob geoeffnet oder geschlossen (WWW-607)
	* Aenderung der Ausgabereihenfolge im FE (Sigel, Anschrift, Oeffnungszeiten, Kontakt, Bestand, Zusatzinformationen) (WWW-604)
	* Optimierung Zuweisung Controller->View
	* Lokalisierung (WWW-606)

2011-03-08 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Einfuegen der Storage PID ueber Constants

2011-02-28 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Inhaltsverzeichnis in der Sidebar wird nicht angezeigt (WWW-581)
	* Aenderung der Zeitzone

2011-02-23 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Hook Bugfixing

2011-02-22 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Hook Anpassung

2011-02-11 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Fakultaeten und Bibliotheken werden mit Nachfrage geloescht

2011-02-10 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>