@@ -44,7 +44,7 @@
 							</f:then>
 						</f:if>
 					{bibo.plz} {bibo.ort}</p>
-						<a class="map" id="cl-{bibo.uid}"><f:translate key="karte" /></a>
+						<a class="map" id="cl-{bibo.uid}" title="{f:translate(key:'maptitle')}"><f:translate key="karte" /></a>
 						<div id="map-{bibo.uid}" class="karte"></div>
 						</dd>
 					</f:if>
